Update button order, align to right, make Clear secondary, fix checkbox alignment

--- a/src/frontend/src/components/CreditSearchForm.css
+++ b/src/frontend/src/components/CreditSearchForm.css
@@ -180,20 +180,25 @@
 }
 
 .checkbox-indent .checkbox-label {
-  text-indent: -1.5rem;
+  display: inline-block;
   padding-left: 1.5rem;
+  text-indent: 0;
+}
+
+.checkbox-indent .checkbox-label span {
+  margin-right: 0.25rem;
   display: inline-block;
 }
 
 /* Form actions */
 .form-actions {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   margin-top: 1.5rem;
 }
 
 .clear-button {
-  margin-right: 1rem;
+  margin-left: 1rem;
 }
 
 .submit-button {
